--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -43,6 +43,7 @@
     "get-port": "^7.1.0",
     "koffi": "^2.14.1",
     "langchain": "^0.3.34",
+    "lucide-vue-next": "^0.556.0",
     "mammoth": "^1.11.0",
     "marked": "^16.3.0",
     "marked-shiki": "^1.2.1",
