wip: adjust chat preests

--- a/WebUI/external/presets/reasoning.json
+++ b/WebUI/external/presets/reasoning.json
@@ -2,7 +2,7 @@
   "type": "chat",
   "name": "Reasoning",
   "description": "Use large reasoning models to get deeper and more accurate responses. Provides step-by-step thinking and detailed analysis.",
-  "displayPriority": 96,
+  "displayPriority": 95,
   "tags": ["Reasoning", "Analysis", "Step-by-step"],
   "backends": ["llamaCPP", "openVINO"],
   "systemPrompt": "You are a helpful AI assistant. When solving problems, show your reasoning step by step. Think through the problem carefully before providing your answer.",
@@ -10,5 +10,6 @@
   "maxNewTokens": 2048,
   "requiresReasoning": true,
   "toolsEnabledByDefault": false,
+  "enableRAG": true,
   "requiredModels": []
 }
