--- a/comfyui-deps/pyproject.toml
+++ b/comfyui-deps/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "aipg-comfyui"
-version = "0.3.76"
+version = "0.4.0"
 requires-python = "==3.12.*"
 dependencies = [
   "addict", 
@@ -11,8 +11,8 @@ dependencies = [
   "chardet",
   "color-matcher",
   "comfyui-embedded-docs==0.3.1",
-  "comfyui-frontend-package==1.33.10",
-  "comfyui-workflow-templates==0.7.25",
+  "comfyui-frontend-package==1.33.13",
+  "comfyui-workflow-templates==0.7.54",
   "diffusers>=0.35.2",
   "einops",
   "filelock",
@@ -43,7 +43,7 @@ dependencies = [
   "pydantic~=2.0",
   "PyGithub",
   "python-dateutil", 
-  "pytorch-triton-xpu>=3.5.0; sys_platform == 'win32'",
+  "triton-xpu>=3.6.0; sys_platform == 'win32'",
   "pyyaml",
   "rich",
   "safetensors>=0.4.2",
@@ -60,10 +60,10 @@ dependencies = [
   "timm>=0.9.2",
   "tokenizers>=0.13.3",
   "toml",
-  "torch>=2.9.0",
-  "torchaudio>=2.9.0",
+  "torch>=2.10.0",
+  "torchaudio",
   "torchsde",
-  "torchvision>=0.24.0",
+  "torchvision",
   "tqdm",
   "transformers[timm]>=4.50.3",
   "trimesh[easy]", 
@@ -80,26 +80,30 @@ dependencies = [
 python-preference = "only-managed"
 link-mode = "clone"
 index-strategy = "unsafe-best-match"
-required-environments = [
-  "sys_platform == 'win32'",
-  "sys_platform == 'darwin'",
-]
-environments = [
-  "sys_platform == 'win32'",
-  "sys_platform == 'darwin'",
-]
+required-environments = ["sys_platform == 'win32'", "sys_platform == 'darwin'"]
+prerelease = "if-necessary-or-explicit"
+environments = ["sys_platform == 'win32'", "sys_platform == 'darwin'"]
 
 [tool.uv.pip]
 torch-backend = "xpu"
 
 [tool.uv.sources]
-torch = [{ index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
-         { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" }]
-torchaudio = [{ index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
-              { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" }]
-torchvision = [{ index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
-               { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" }]
+torch = [
+  { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
+  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
+]
+torchaudio = [
+  { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
+  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
+]
+torchvision = [
+  { index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
+  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
+]
 pytorch-triton-xpu = [
+  { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
+]
+triton-xpu = [
   { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
 ]
 insightface = [
@@ -112,10 +116,10 @@ mediapipe = [
 
 [[tool.uv.index]]
 name = "pytorch-xpu"
-url = "https://download.pytorch.org/whl/xpu"
+url = "https://download.pytorch.org/whl/test/xpu"
 explicit = true
 
 [[tool.uv.index]]
 name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/cpu"
+url = "https://download.pytorch.org/whl/test/cpu"
 explicit = true
