--- a/WebUI/external/presets/reasoning.json
+++ b/WebUI/external/presets/reasoning.json
@@ -5,6 +5,10 @@
   "displayPriority": 70,
   "tags": ["Reasoning", "Analysis", "Step-by-step"],
   "backends": ["llamaCPP", "openVINO"],
+  "preferredModels": {
+    "openVINO": "OpenVINO/Qwen3-4B-int4-ov",
+    "llamaCPP": "unsloth/Qwen3-4B-GGUF/Qwen3-4B-Q5_K_S.gguf"
+  },
   "systemPrompt": "You are a helpful AI assistant. When solving problems, show your reasoning step by step. Think through the problem carefully before providing your answer.",
   "contextSize": 8192,
   "maxNewTokens": 2048,
@@ -13,6 +17,7 @@
   "enableRAG": true,
   "requiredModels": []
 }
+
 
 
 
