fix: use custom wav converter to avoid issues with workers in electron

--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -36,8 +36,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
-    "extendable-media-recorder": "^9.2.31",
-    "extendable-media-recorder-wav-encoder": "^7.0.132",
     "extract-zip": "^2.0.1",
     "get-port": "^7.1.0",
     "koffi": "^2.14.1",
@@ -59,6 +57,7 @@
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^3.3.1",
     "three": "^0.181.1",
+    "ts-ebml": "^3.0.2",
     "uint8array-extras": "^1.5.0",
     "unplugin-auto-import": "^20.2.0",
     "vee-validate": "^4.15.1",
