--- a/service/pyproject.toml
+++ b/service/pyproject.toml
@@ -40,6 +40,11 @@ url = "https://download.pytorch.org/whl/xpu"
 explicit = true
 
 [[tool.uv.index]]
+name = "pytorch-cuda"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
+
+[[tool.uv.index]]
 name = "pytorch-cpu"
 url = "https://download.pytorch.org/whl/cpu"
 explicit = true
