--- a/comfyui-deps/pyproject.toml
+++ b/comfyui-deps/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
   "mss>=10.1.0",
   "ninja~=1.11.1.4",
   "numpy>=1.25.0",
+  "numba>=0.63.1",
   "omegaconf",
   "onnx>=1.14.0",
   "onnxruntime",
@@ -117,10 +118,10 @@ mediapipe = [
 
 [[tool.uv.index]]
 name = "pytorch-xpu"
-url = "https://download.pytorch.org/whl/test/xpu"
+url = "https://download.pytorch.org/whl/xpu"
 explicit = true
 
 [[tool.uv.index]]
 name = "pytorch-cpu"
-url = "https://download.pytorch.org/whl/test/cpu"
+url = "https://download.pytorch.org/whl/cpu"
 explicit = true
