--- a/comfyui-deps/pyproject.toml
+++ b/comfyui-deps/pyproject.toml
@@ -3,9 +3,9 @@ name = "aipg-comfyui"
 version = "0.10.0"
 requires-python = "==3.12.*"
 dependencies = [
-  "addict", 
+  "addict",
   "aiohttp>=3.11.8",
-  "albumentations", 
+  "albumentations",
   "alembic",
   "av>=14.2.0",
   "chardet",
@@ -20,7 +20,7 @@ dependencies = [
   "ftfy",
   "fvcore",
   "gguf>=0.13.0",
-  "GitPython",
+  "gitpython",
   "huggingface-hub>0.20",
   "imageio-ffmpeg",
   "importlib_metadata",
@@ -30,7 +30,7 @@ dependencies = [
   "llvmlite>=0.46.0",
   "matplotlib",
   "matrix-nio",
-  "mediapipe",
+  "mediapipe>=0.10.32",
   "mss>=10.1.0",
   "ninja~=1.11.1.4",
   "numpy>=1.25.0",
@@ -40,18 +40,18 @@ dependencies = [
   "onnxruntime",
   "opencv-python>=4.7.0.72",
   "Pillow>=10.3.0",
-  "protobuf",
+  "protobuf>=6.33.5",
   "psutil",
   "pydantic-settings~=2.0",
   "pydantic~=2.0",
-  "PyGithub",
-  "python-dateutil", 
+  "pygithub",
+  "python-dateutil",
   "triton-xpu>=3.6.0; sys_platform == 'win32'",
   "pyyaml",
   "rich",
   "safetensors>=0.4.2",
-  "scikit-image", 
-  "scikit-learn", 
+  "scikit-image",
+  "scikit-learn",
   "scipy",
   "segment-anything>=1.0",
   "sentencepiece",
@@ -59,7 +59,7 @@ dependencies = [
   "spandrel",
   "SQLAlchemy",
   "stringzilla==3.12.6",
-  "svglib", 
+  "svglib",
   "timm>=0.9.2",
   "tokenizers>=0.13.3",
   "toml",
@@ -69,13 +69,13 @@ dependencies = [
   "torchvision",
   "tqdm",
   "transformers[timm]>=4.50.3",
-  "trimesh[easy]", 
+  "trimesh[easy]",
   "typer",
   "typing-extensions",
   "ultralytics>=8.3.233",
   "uv",
-  "yacs", 
-  "yapf", 
+  "yacs",
+  "yapf",
   "yarl>=1.18.0",
 ]
 
@@ -112,9 +112,6 @@ triton-xpu = [
 insightface = [
   { url = "https://github.com/TNG/AI-Playground/releases/download/insightface-0.7.3/insightface-0.7.3-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
   { url = "https://github.com/Gourieff/Assets/raw/main/Insightface/insightface-0.7.3-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
-]
-mediapipe = [
-  { url = "https://github.com/TNG/AI-Playground/releases/download/mediapipe-0.10.14/mediapipe-0.10.14-cp312-cp312-macosx_11_0_universal2.whl", marker = "sys_platform == 'darwin'" },
 ]
 
 [[tool.uv.index]]
