--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -23,8 +23,8 @@
     "@google/model-viewer": "^4.1.0",
     "@heroicons/vue": "^2.2.0",
     "@langchain/classic": "^1.0.16",
-    "@langchain/community": "^1.1.13",
-    "@langchain/core": "^1.1.20",
+    "@langchain/community": "^1.1.15",
+    "@langchain/core": "^1.1.24",
     "@langchain/openai": "^1.2.6",
     "@radix-icons/vue": "^1.0.0",
     "@tailwindcss/vite": "^4.1.18",
@@ -39,14 +39,14 @@
     "extract-zip": "^2.0.1",
     "get-port": "^7.1.0",
     "koffi": "^2.14.1",
-    "langchain": "^1.2.19",
+    "langchain": "^1.2.24",
     "lucide-vue-next": "^0.562.0",
     "mammoth": "^1.11.0",
     "marked": "^16.4.2",
     "marked-shiki": "^1.2.1",
     "ollama": "^0.6.3",
     "partysocket": "^1.1.6",
-    "pdf-parse": "^1.1.1",
+    "pdf-parse": "1.1.1",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
     "radix-vue": "^1.9.17",
